--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ a:focus {
     font-size: 4.5rem;
     font-weight: bold;
     margin-bottom: 15px;
-    color: #002c3e;
+    color: #0c6589;
     line-height: 70px;
 }
 
@@ -408,7 +408,7 @@ a:focus {
 
 .product_section .box .detail-box h6 {
   margin-top: 10px;
-  color: #002c3e;
+  color: #0c6589;
   font-weight: 600;
 }
 
@@ -524,7 +524,7 @@ a:focus {
 }
 
 .arrival_section .heading_container {
-  color: #002c3e;
+  color: #0c6589;
   margin-bottom: 10px;
 }
 
@@ -570,7 +570,7 @@ a:focus {
 .why_section .box {
     text-align: center;
     margin-top: 45px;
-    background-color: #002c3e;
+    background-color: #0c6589;
     padding: 45px 50px;
     border-radius: 5px;
     color: #ffffff;
@@ -608,7 +608,7 @@ a:focus {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #002c3e;
+  color: #0c6589;
 }
 
 .subscribe_section .subscribe_form .heading_container h2 {
@@ -790,8 +790,7 @@ a:focus {
 
 /* footer section*/
 .footer_section {
-  background-color: #002c3e;
-  color: #ffffff;
+  background-color: #0c6589;
   padding-top: 70px;
 }
 
@@ -867,7 +866,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #002c3e;
+  color: #0c6589;
   width: 30px;
   height: 30px;
   border-radius: 100%;
